# arritmic3d

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  arr3D_config.json  arr3D_config.py  arr3D_viewer.py  arritmic3D.py  build_slab.py  build_slab_regions.py  install.sh  install_3.11.sh  install_venv.sh  pyproject.toml  requirements.txt  requirements_3.11.txt  test.py  test_file.py  test_multisim.py  test_ventricle.py
.github/workflows/: release.yml
Readers/Genera_VTK_Cubo/: genera_bloque.py
Readers/Reader_VTK_VentIzq/: reader_vtk_unstgrid_Elementos.py  reader_vtk_unstgrid_Nodos.py
arritmic3D/: AC.pde  BVSpline.pde  CGrid.pde  CaseLoader.pde  EventQueue.pde  FileParams.pde  Gui.pde  Node.pde  Spline.pde  WinParams.pde  arritmic3D.pde
cases/: README
docs/: Arritmic3D_API.md  Classes_2024_11.docx  DS_TriggerEvent.mmd  Doxyfile  Doxyfile_Latex  index.html  index.qmd  references.bib
docs/index_files/libs/bootstrap/: bootstrap-4248605eee59dc0e704e26d16b9f13bf.min.css  bootstrap-4c99f878d533c0579ab2b456367d2d1a.min.css  bootstrap-5be34015b61873c2065907471232d497.min.css
mk/: devel.mk
restitutionCurves/: RestitutionCurve_BZ_APD_Endo.csv  RestitutionCurve_BZ_APD_Epi.csv  RestitutionCurve_BZ_APD_Mid.csv  RestitutionCurve_BZ_CV_Endo.csv  RestitutionCurve_BZ_CV_Epi.csv  RestitutionCurve_BZ_CV_Mid.csv  RestitutionCurve_Sanas_APD_Endo.csv  RestitutionCurve_Sanas_APD_Epi.csv  RestitutionCurve_Sanas_APD_Mid.csv  RestitutionCurve_Sanas_CV_Endo.csv  RestitutionCurve_Sanas_CV_Epi.csv  RestitutionCurve_Sanas_CV_Mid.csv
restitutionModels/: TenTuscher_APD_BZ_Endo.csv  TenTuscher_APD_BZ_Epi.csv  TenTuscher_APD_BZ_Mid.csv  TenTuscher_APD_HE_Endo.csv  TenTuscher_APD_HE_Epi.csv  TenTuscher_APD_HE_Mid.csv  TenTuscher_CV_BZ_Endo.csv  TenTuscher_CV_BZ_Epi.csv  TenTuscher_CV_BZ_Mid.csv  TenTuscher_CV_HE_Endo.csv  TenTuscher_CV_HE_Epi.csv  TenTuscher_CV_HE_Mid.csv  TorOrd_APD_Endo_Control.csv  TorOrd_APD_Endo_HCM_Extreme.csv  TorOrd_APD_Endo_HCM_Moderate.csv  TorOrd_APD_Endo_HCM_Severe.csv  TorOrd_APD_Epi_Control.csv  TorOrd_APD_Epi_HCM_Extreme.csv  TorOrd_APD_Epi_HCM_Moderate.csv  TorOrd_APD_Epi_HCM_Severe.csv  TorOrd_CV_Endo_Control.csv  TorOrd_CV_Endo_HCM_Extreme.csv  TorOrd_CV_Endo_HCM_Moderate.csv  TorOrd_CV_Endo_HCM_Severe.csv  TorOrd_CV_Epi_Control.csv  TorOrd_CV_Epi_HCM_Extreme.csv  TorOrd_CV_Epi_HCM_Moderate.csv  TorOrd_CV_Epi_HCM_Severe.csv  config_TenTuscher_APD.csv  config_TenTuscher_CV.csv  config_TorOrd_APD.csv  config_TorOrd_CV.csv
restitutionSurfaces/: RestitutionCurve_Sanas_APD_Epi.csv  RestitutionSurface_BZ_APD_Endo.csv  RestitutionSurface_BZ_APD_Epi.csv  RestitutionSurface_BZ_APD_Mid.csv  RestitutionSurface_Sanas_APD_Endo.csv  RestitutionSurface_Sanas_APD_Epi.csv  RestitutionSurface_Sanas_APD_Mid.csv
src/: action_potential.h  action_potential_rc.h  action_potential_rs.h  basic_tissue.h  bindings.cpp  cell_event_queue.h  conduction_velocity.h  conduction_velocity_simple.h  definitions.h  error.h  geometry.h  membrane_potential.h  node.cpp  node.h  node_parameters.h  sensor_dict.h  spline.h  spline2D.h  tissue.h  utility.h
src/arritmic/: __init__.py  arr3D_activations.py  arr3D_build_slab.py  arr3D_config.py  arritmic3D.py  build_slab.py
src/arritmic3d/: arr3D_activations.py  arr3D_config.py  arritmic3D.py
test/: plot_functions.py  run_readme_build_examples.py  test.cpp  test.py  test1.cpp  test2.cpp  test_arritmic3d.py  test_event_queue.cpp  test_file.py  test_init.cpp  test_load.cpp  test_models.py  test_multisim.py  test_reentry.cpp  test_reentry.py  test_reentry_disc.py  test_reentry_rotor.py  test_save.cpp  test_spline.cpp  test_spline2d.cpp  test_ventricle.py  test_wire_small.py
tools/: convert_vtk.py  curve2surf.py
